--- a/docs/changelog/0.18.1-changelog.md
+++ b/docs/changelog/0.18.1-changelog.md
@@ -1,3 +1,96 @@
 # v0.18.1
 
-2024 年 5 月 4 日
+2024 年 4 月 28 日
+
+### 重大变更和弃用
+
+- 移除了弃用的 `manim new` 命令 by [@chopan050](https://github.com/chopan050) in [#3512](https://github.com/ManimCommunity/manim/pull/3512)
+- 移除了对动态插件导入的支持 by [@Viicos](https://github.com/Viicos) in [#3524](https://github.com/ManimCommunity/manim/pull/3524)
+- 移除了 meth:`.Mobject.wag` by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3539](https://github.com/ManimCommunity/manim/pull/3539)
+- 移除了弃用的参数和动画 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3688](https://github.com/ManimCommunity/manim/pull/3688)
+
+### 新功能
+
+- 为 `VMobject` 添加了 `cap_style` 功能 by [@MathItYT](https://github.com/MathItYT) in [#3516](https://github.com/ManimCommunity/manim/pull/3516)
+- 允许隐藏版本启动画面 by [@jeertmans](https://github.com/jeertmans) in [#3329](https://github.com/ManimCommunity/manim/pull/3329)
+- 增加了向 `Scene.play()` 传递列表和生成器的能力 by [@MrDiver](https://github.com/MrDiver) in [#3365](https://github.com/ManimCommunity/manim/pull/3365)
+- 添加了 `--preview_command` 命令行标志 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3615](https://github.com/ManimCommunity/manim/pull/3615)
+
+### 错误修复和增强
+
+- 允许访问 :class:`.LinearTransformationScene` 中的 ghost 向量 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3435](https://github.com/ManimCommunity/manim/pull/3435)
+- 优化了 `get_unit_normal()` 并在 `manim.utils.space_ops` 中用自定义的 `cross()` 替换了 `np.cross()` by [@chopan050](https://github.com/chopan050) in [#3494](https://github.com/ManimCommunity/manim/pull/3494)
+- 实现字体列表缓存以提高运行时性能 by [@MrDiver](https://github.com/MrDiver) in [#3316](https://github.com/ManimCommunity/manim/pull/3316)
+- 重新格式化 `--save_sections` 输出为 `<Scene>_<SecNum>_<SecName><extension>` 格式 by [@doaamuham](https://github.com/doaamuham) in [#3499](https://github.com/ManimCommunity/manim/pull/3499)
+- 在像素数组中考虑 dtype，使 invert 函数中的最大值保持正确 by [@jeertmans](https://github.com/jeertmans) in [#3493](https://github.com/ManimCommunity/manim/pull/3493)
+- 为 `Rectangle` 添加了 `grid_lines` 属性，以便为网格线添加单独样式 by [@RobinPH](https://github.com/RobinPH) in [#3428](https://github.com/ManimCommunity/manim/pull/3428)
+- 修复了矩形网格属性 ([#3082](https://github.com/ManimCommunity/manim/issues/3082)) by [@pauluhlenbruck](https://github.com/pauluhlenbruck) in [#3513](https://github.com/ManimCommunity/manim/pull/3513)
+- 修复了零运行时长度动画给出有用错误而非管道损坏的问题 by [@MrDiver](https://github.com/MrDiver) in [#3491](https://github.com/ManimCommunity/manim/pull/3491)
+- 修复了 `StreamLines` 在单一颜色下忽略描边宽度的问题 by [@yashm277](https://github.com/yashm277) in [#3436](https://github.com/ManimCommunity/manim/pull/3436)
+- 修复了 `MoveAlongPath` 文档的格式 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3541](https://github.com/ManimCommunity/manim/pull/3541)
+- 为 `VGroup.add()` 错误消息添加了有用提示 by [@vvolhejn](https://github.com/vvolhejn) in [#3561](https://github.com/ManimCommunity/manim/pull/3561)
+- 使 `earclip_triangulation` 更加健壮 by [@hydromelvictor](https://github.com/hydromelvictor) in [#3574](https://github.com/ManimCommunity/manim/pull/3574)
+- 重构了 `TexTemplate` by [@Viicos](https://github.com/Viicos) in [#3520](https://github.com/ManimCommunity/manim/pull/3520)
+- 修复了使用 OpenGL 渲染器时 `write_subcaption_file` 的错误 by [@yuan-xy](https://github.com/yuan-xy) in [#3546](https://github.com/ManimCommunity/manim/pull/3546)
+- 修复了 `get_arc_center()` 返回点引用的问题 by [@sparshg](https://github.com/sparshg) in [#3599](https://github.com/ManimCommunity/manim/pull/3599)
+- 改进了对指定字体名称的处理 by [@staghado](https://github.com/staghado) in [#3429](https://github.com/ManimCommunity/manim/pull/3429)
+- 修复 `.become` 的行为，避免通过副作用修改目标 mobject，修复颜色链接问题 by [@MrDiver](https://github.com/MrDiver) in [#3508](https://github.com/ManimCommunity/manim/pull/3508)
+- 修复了 :class:`.VMobjectFromSVGPath` 中的错误 by [@abul4fia](https://github.com/abul4fia) in [#3677](https://github.com/ManimCommunity/manim/pull/3677)
+- 修复 Windows cp1252 编码失败（修复测试流水线）by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3687](https://github.com/ManimCommunity/manim/pull/3687)
+- 修复 try... except 中的 NameError by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3694](https://github.com/ManimCommunity/manim/pull/3694)
+- 修复 :meth:`.LinearTransformationScene.apply_matrix` 的连续调用 by [@SirJamesClarkMaxwell](https://github.com/SirJamesClarkMaxwell) in [#3675](https://github.com/ManimCommunity/manim/pull/3675)
+- 修复了 `Mobject.put_start_and_end_on` 在起点和终点相同时的问题 by [@MontroyJosh](https://github.com/MontroyJosh) in [#3718](https://github.com/ManimCommunity/manim/pull/3718)
+- 修复了 `SpiralIn` 不显示元素的问题 by [@gixtox](https://github.com/gixtox) in [#3589](https://github.com/ManimCommunity/manim/pull/3589)
+- 清理了 `Graph` 布局并增加了灵活性 by [@Nikhil-42](https://github.com/Nikhil-42) in [#3434](https://github.com/ManimCommunity/manim/pull/3434)
+- `AnimationGroup`：优化了 `interpolate()` 并修复了 `finish()` 上的 alpha 错误 by [@chopan050](https://github.com/chopan050) in [#3542](https://github.com/ManimCommunity/manim/pull/3542)
+- 修复了关于缺失插件 `""` 的警告 by [@behackl](https://github.com/behackl) in [#3734](https://github.com/ManimCommunity/manim/pull/3734)
+
+### 文档
+
+- `indication` 文档中的拼写错误 by [@jcep](https://github.com/jcep) in [#3477](https://github.com/ManimCommunity/manim/pull/3477)
+- 修复快速入门教程中的拼写错误：360° 改为 180° by [@szchixy](https://github.com/szchixy) in [#3498](https://github.com/ManimCommunity/manim/pull/3498)
+- 修复 mobject 文档字符串中的拼写错误：`line` -> `square` by [@yuan-xy](https://github.com/yuan-xy) in [#3509](https://github.com/ManimCommunity/manim/pull/3509)
+- 在快速入门示例中解释 `.Transform` 与 `.ReplacementTransform` 的区别 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3500](https://github.com/ManimCommunity/manim/pull/3500)
+- 修复构建块教程中的格式 by [@MrDiver](https://github.com/MrDiver) in [#3515](https://github.com/ManimCommunity/manim/pull/3515)
+- 修复 `Indicate` 文档字符串中的拼写错误 by [@Lawqup](https://github.com/Lawqup) in [#3461](https://github.com/ManimCommunity/manim/pull/3461)
+- 为 `.to_edge` 和 `to_corner` 添加文档 by [@TheMathematicFanatic](https://github.com/TheMathematicFanatic) in [#3408](https://github.com/ManimCommunity/manim/pull/3408)
+- 添加关于 Cairo 1.18 的说明 by [@jeertmans](https://github.com/jeertmans) in [#3530](https://github.com/ManimCommunity/manim/pull/3530)
+- 修复 `get_y_axis_label` 参数文档中的拼写错误 by [@yuan-xy](https://github.com/yuan-xy) in [#3547](https://github.com/ManimCommunity/manim/pull/3547)
+- 在 `ManimColor` 的文档字符串中添加关于类构造函数的说明 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3554](https://github.com/ManimCommunity/manim/pull/3554)
+- 改进关于贡献文档的文档部分 by [@chopan050](https://github.com/chopan050) in [#3555](https://github.com/ManimCommunity/manim/pull/3555)
+- 移除 -s / --save_last_frame 命令行标志的重复文档 by [@gixtox](https://github.com/gixtox) in [#3528](https://github.com/ManimCommunity/manim/pull/3528)
+- 更新 Docker 说明以使用 PATH 中的 bash by [@NotWearingPants](https://github.com/NotWearingPants) in [#3582](https://github.com/ManimCommunity/manim/pull/3582)
+- 修复 `value_tracker.py` 中的拼写错误 by [@yuan-xy](https://github.com/yuan-xy) in [#3594](https://github.com/ManimCommunity/manim/pull/3594)
+- 在示例库中为 `BooleanOperations` 添加 `ref_class` by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3598](https://github.com/ManimCommunity/manim/pull/3598)
+- 在贡献文档中将 `Vector3` 改为 `Vector3D` by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3639](https://github.com/ManimCommunity/manim/pull/3639)
+- 为 `Mobject`/`VMobject` 方法添加一些示例 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3641](https://github.com/ManimCommunity/manim/pull/3641)
+- 修复文档中 Poetry 安装指南的损坏链接 by [@biinnnggggg](https://github.com/biinnnggggg) in [#3692](https://github.com/ManimCommunity/manim/pull/3692)
+- 修复文档首页中发现的轻微语法错误 by [@biinnnggggg](https://github.com/biinnnggggg) in [#3690](https://github.com/ManimCommunity/manim/pull/3690)
+- 修复关于翻译页面的拼写错误 by [@biinnnggggg](https://github.com/biinnnggggg) in [#3696](https://github.com/ManimCommunity/manim/pull/3696)
+- 修复 Manim 输出设置中过时的命令行选项描述 by [@HairlessVillager](https://github.com/HairlessVillager) in [#3674](https://github.com/ManimCommunity/manim/pull/3674)
+- 在安装指南中提及 pixi by [@pavelzw](https://github.com/pavelzw) in [#3678](https://github.com/ManimCommunity/manim/pull/3678)
+- 更新类型指南 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3704](https://github.com/ManimCommunity/manim/pull/3704)
+- 更新 `ParametricFunction` 的文档和类型 by [@danielzsh](https://github.com/danielzsh) in [#3703](https://github.com/ManimCommunity/manim/pull/3703)
+- 修复 `Rotate` 中的文档字符串标记 by [@TheCrowned](https://github.com/TheCrowned) in [#3721](https://github.com/ManimCommunity/manim/pull/3721)
+- 改进轴标签示例的一致性 by [@amrear](https://github.com/amrear) in [#3730](https://github.com/ManimCommunity/manim/pull/3730)
+
+### 维护和测试
+
+- 修复构建可下载文档操作中的错误路径 by [@behackl](https://github.com/behackl) in [#3450](https://github.com/ManimCommunity/manim/pull/3450)
+- 为 `_config` 添加类型提示 by [@Viicos](https://github.com/Viicos) in [#3440](https://github.com/ManimCommunity/manim/pull/3440)
+- 更新依赖约束，修复弃用警告 by [@Viicos](https://github.com/Viicos) in [#3376](https://github.com/ManimCommunity/manim/pull/3376)
+- 将 Docker 基础镜像更新为 python3.12-slim ([#3458](https://github.com/ManimCommunity/manim/issues/3458)) by [@PikaBlue107](https://github.com/PikaBlue107) in [#3459](https://github.com/ManimCommunity/manim/pull/3459)
+- 修复 example_scenes/basic.py 中的 `line_join` 为 `joint_type` by [@szchixy](https://github.com/szchixy) in [#3510](https://github.com/ManimCommunity/manim/pull/3510)
+- 修复 :attr:`.Mobject.animate` 的类型提示以支持 LSP 自动补全 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3543](https://github.com/ManimCommunity/manim/pull/3543)
+- 完成 `contributing/typings.rst` 中的 TODO by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3545](https://github.com/ManimCommunity/manim/pull/3545)
+- 修复 Cairo 测试中 `Mobject` 弃用的 `get_*()` 和 `set_*()` 方法的使用 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3549](https://github.com/ManimCommunity/manim/pull/3549)
+- 在 Sphinx 文档中添加对 Manim 类型别名的支持并添加新的 TypeAliases by [@chopan050](https://github.com/chopan050) in [#3484](https://github.com/ManimCommunity/manim/pull/3484)
+- 修复 `Animation` 的类型 by [@dandavison](https://github.com/dandavison) in [#3568](https://github.com/ManimCommunity/manim/pull/3568)
+- 为 `ManimFrame` 的未来使用添加一些 TODO by [@chopan050](https://github.com/chopan050) in [#3553](https://github.com/ManimCommunity/manim/pull/3553)
+- 修复 :attr:`InternalPoint2D_Array` 的类型提示 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3592](https://github.com/ManimCommunity/manim/pull/3592)
+- 修复 Windows CI 流水线中的错误 by [@behackl](https://github.com/behackl) in [#3611](https://github.com/ManimCommunity/manim/pull/3611)
+- 修复 indication.py 的类型提示 by [@yuan-xy](https://github.com/yuan-xy) in [#3613](https://github.com/ManimCommunity/manim/pull/3613)
+- 将向量类型别名恢复为 NumPy ndarrays by [@chopan050](https://github.com/chopan050) in [#3595](https://github.com/ManimCommunity/manim/pull/3595)
+- 运行 `poetry lock --no-update` by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3621](https://github.com/ManimCommunity/manim/pull/3621)
+- 代码清理：移除未使用的导入和全局变量 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3620](https://github.com/ManimCommunity/manim/pull/3620)
+- 修复 `Vector` 方向参数的类型提示 by [@JasonGrace2282](https://github.com/JasonGrace2282) in [#3640](https://github.com/ManimCommunity/manim/pull/3640)
